Atualização de código

--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="sobre.html">Sobre Nós</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="projeto.html">Projetos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
     <div id="topo">
     </div>
 
-    <main class="contato">
+    <main class="faleconosco">
         <br>
         <h2>Fale Conosco</h2>
         <hr>
