--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Loviel  </title>
+    <title>Loviel </title>
     <!-- Area das metas -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Thamires Viel e Sabrina Lopes" />
@@ -28,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="sobre.html">Sobre Nós</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="projeto.html">Projetos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -60,7 +60,7 @@
                         <strong>Lipgloss - Up Lips</strong>
                     </h3>
                     <p>O lipgloss que aumenta de maneira instantânea e temporária seus lábios</p>
-                    <form action="projetos.html" method="get"><input type="submit" value="Saiba +"></form>
+                    <form action="projeto.html" method="get"><input type="submit" value="Saiba +"></form>
                 </div>
 
                 <div class="miniatura 1">
@@ -69,7 +69,7 @@
                         <strong>Juice King</strong>
                     </h3>
                     <p>Juice King é o suco de caixinha mais saudável que você já viu</p>
-                    <form action="projetos.html" method="get"><input type="submit" value="Saiba +"></form>
+                    <form action="projeto.html" method="get"><input type="submit" value="Saiba +"></form>
                 </div>
 
                 <div class="miniatura 2 ">
@@ -78,7 +78,7 @@
                         <strong>Doces da Raposa</strong>
                     </h3>
                     <p>Cartão de visita desenvolvido para uma empresa de doces finos e bolos de pote</p>
-                    <form action="projetos.html" method="get"><input type="submit" value="Saiba +"></form>
+                    <form action="projeto.html" method="get"><input type="submit" value="Saiba +"></form>
                 </div>
             </article>
         </section>
