--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="sobre.html">Sobre Nós</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="projeto.html">Projetos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
